--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
       // Start download after animation
       let link = document.createElement("a");
       link.href = "Amercv2025.pdf"; // Make sure this path is correct
-      link.download = "Amer_Alghanem_CV.docs";
+      link.download = "Amer_Alghanem_CV.pdf";
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
