--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!-- Shining Diamond Download Button -->
    <a id="cv-download-btn" href="Amercv2025.pdf" download="Amer_Alghanem_CV.pdf" class="cv-button">
-        <span class="cv-text">Download CV</span>
+        <span class="cv-text">MY CV</span>
         <div class="cv-progress"></div>
     </a>
 
