--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <p>I'm <span class="typed" data-typed-items="Network and Security Engineer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
 
         <!-- Shining Diamond Download Button -->
-   <a id="cv-download-btn" href="Amercv2025.pdf" download="Amer_Alghanem_CV.pdf" class="cv-button">
-        <span class="cv-text">MY CV</span>
-        <div class="cv-progress"></div>
-    </a>
+  <a id="cv-download-btn" class="cv-button">
+  <span class="cv-text">Download CV</span>
+  <div class="cv-progress"></div>
+</a>
 
         <div class="social-links">
           <a href="https://x.com/AmerAlghanem"><i class="bi bi-twitter-x"></i></a>
