--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 
     setTimeout(() => {
       let link = document.createElement("a");
-      link.href = "Amercv2025.pdf"; // File in same folder as index.html
+      link.href = "25CVAMER.pdf"; // File in same folder as index.html
       link.download = "Amer_Alghanem_CV.pdf";
       document.body.appendChild(link);
       link.click();
