--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@
 
     setTimeout(() => {
       let link = document.createElement("a");
-      link.href = "25CVAMER.pdf"; // File in same folder as index.html
-      link.download = "Amer_Alghanem_CV.pdf";
+      link.href = "Amer_26_CV"; // File in same folder as index.html
+      link.download = "Amer_26_CV";
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
