Update download link to PDF file
Signed-off-by: Amer Ghanem <124627974+Amer9605@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@
 
     setTimeout(() => {
       let link = document.createElement("a");
-      link.href = "Amer_26_CV"; // File in same folder as index.html
-      link.download = "Amer_26_CV";
+      link.href = "Amer_26_CV.pdf"; // File in same folder as index.html
+      link.download = "Amer_26_CV.pdf";
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
